--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# ytmusicapi credential files
+**/browser.json
+**/oauth.json
+
+# InnerTune backups
+**/*.backup
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
